...
            android:paddingBottom="8dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_dialog_reserve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table_reserve"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:paddingRight="8dp"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

            <Button
                android:id="@+id/btn_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table_cancel"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
...
