<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:focusable="true"
android:focusableInTouchMode="true"
android:paddingBottom="5dp"
android:paddingLeft="5dp"
android:paddingRight="5dp"
android:paddingTop="5dp"
tools:context="sk.scolopax.reservrant.ui.HomeActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint"
            android:maxLines="1"/>

    </android.support.design.widget.TextInputLayout>


<android.support.v7.widget.RecyclerView
    android:id="@+id/recycler_view_customers"
    android:scrollbars="vertical"
    android:layout_marginTop="60dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>
</RelativeLayout>
